# module_mocking_isolator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
mock_isolator/: isolator.py  mock_recording_encoder.py  mock_recording_settings.py  recording_mock.py  replaying_mock.py  types.py
tests/unit_tests/: test_mock_recording_encoder.py  test_module_mocking_isolator.py  test_recording_mock.py  test_replaying_mock.py  test_websocket_record_replay.py
tests/unit_tests/test_mock_recording_encoder_files/: test_record_and_replay_interactions.json
tests/unit_tests/test_module_mocking_isolator_files/: test_isolate_dependencies_calculator.json  test_isolate_module_tests.unit_tests.test_module_mocking_isolator_module_1.file1.File2Class.json  test_isolate_module_tests.unit_tests.test_module_mocking_isolator_module_1.file1.do_file2_things.json  test_isolate_module_tests.unit_tests.test_module_mocking_isolator_module_1.file1.f2.json  test_isolate_module_tests.unit_tests.test_module_mocking_isolator_module_1.file1.tests.unit_tests.test_module_mocking_isolator_module_2.file3.json
tests/unit_tests/test_module_mocking_isolator_module_1/: file1.py
tests/unit_tests/test_module_mocking_isolator_module_2/: file2.py  file3.py
