[tool.poetry]
name = "module_mocking_isolator"
version = "0.1.0"
description = "A module mocking isolator for Python testing"
authors = ["John Knapp"]
license = "MIT"
readme = "README.md"
packages = [{include = "mock_isolator"}]

[tool.poetry.dependencies]
python = ">=3.11"
mock = "*"
bson = "^0.5.10"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.11"
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
websockets = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
